<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.anoopsen</groupId>
	<artifactId>MLAnalyticsProject</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>MLAnalyticsProject</name>
	<description>Demo project for Spring Boot</description>
	
	<properties>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<!--<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<!--JAVAX servlet dependency
		<dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>javax.servlet-api</artifactId>
		    <version>4.0.1</version>
		    <scope>provided</scope>
		</dependency>-->

		<!-- Apache Spark Dependencies -->
		<dependency>
	        <groupId>org.apache.spark</groupId>
	        <artifactId>spark-core_2.12</artifactId>
	        <version>3.5.2</version>
	    </dependency>
	    
		<dependency>
		    <groupId>org.apache.spark</groupId>
		    <artifactId>spark-mllib_2.12</artifactId>
		    <version>3.5.2</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.spark</groupId>
		    <artifactId>spark-sql_2.12</artifactId>
		    <version>3.5.2</version>
		</dependency>

		<!-- Scala Library Dependency
		<dependency>
	        <groupId>org.scala-lang</groupId>
	        <artifactId>scala-library</artifactId>
	        <version>2.12.18</version>
	    </dependency>-->

		<!-- Spring Boot Test Dependency -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j2-impl -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-slf4j2-impl</artifactId>
		    <!--<version>3.0.0-beta2</version>-->
		    <scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!-- Scala Maven Plugin -->
			<plugin>
	            <groupId>net.alchim31.maven</groupId>
	            <artifactId>scala-maven-plugin</artifactId>
	            <version>4.5.6</version>
	            <executions>
	                <execution>
	                    <goals>
	                        <goal>compile</goal>
	                        <goal>testCompile</goal>
	                    </goals>
	                </execution>
	            </executions>
        	</plugin>
        	<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <configuration>
			        <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-exports java.base/sun.misc=ALL-UNNAMED</argLine>
			    </configuration>
			</plugin>
		</plugins>
	</build>
</project>
